Firefox layout bugfix in text fields.

--- a/styles/form/field.sass
+++ b/styles/form/field.sass
@@ -99,7 +99,7 @@
         position: relative
         display: flex
         font-size: 14px
-        overflow-x: hidden
+        overflow: hidden
         em
             font-style: normal
             color: $color-text-light
